[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tinyharness"
version = "0.2.0"
description = "A modular middleware harness for LangChain agents. Featuring a structured planner to maintain state and focus across complex tasks—and more to come."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Thomas Kaskosz", email = "thomas.kaskosz@gmail.com" }
]
license = { text = "MIT" }
keywords = ["langchain", "langgraph", "agent-harness", "planning", "middleware"]
dependencies = [
    "langchain>=1.0.0",
    "deepagents>=0.4.0",  # Matches current ecosystem middleware hooks
    "pandas>=2.2.0",      # Ensures native .to_markdown() compatibility
    "tabulate>=0.9.0"     # Required backend dependency for pandas markdown rendering
]

[tool.setuptools.packages.find]
where = ["src"]